adding webpack output to eslint ignore

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,9 @@
         "sourceType": "module"
     },
     "rules": {
-    }
+    },
+    "ignorePatterns": [
+        "dist/main.js",
+        "node_modules/"
+    ]
 }
